Fix pointer events when nav is not visible

--- a/src/app/side-nav/side-nav.component.scss
+++ b/src/app/side-nav/side-nav.component.scss
@@ -9,8 +9,11 @@
 
 .fade-out {
     opacity: 0 !important;
-    pointer-events: none;
     //display: none !important;
+}
+
+.nopointer {
+    pointer-events: none;
 }
 
 .add-video-btn:hover {
